fix: contact form bg align

--- a/web/src/sass/components/_contact.scss
+++ b/web/src/sass/components/_contact.scss
@@ -32,6 +32,7 @@
 	}
 
 	&__form {
+		align-self: flex-start;
 		padding: 64px 108px;
 		background-color: $c-accent-dark;
 
